--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^7.12.0",
+    "moment": "^2.29.1",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
